--- a/MVC_web/Views/Employee/CreateEmployee.cshtml
+++ b/MVC_web/Views/Employee/CreateEmployee.cshtml
@@ -9,6 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <script src="~/Scripts/Validation.js"></script>
     <title>CreateEmployee</title>
     <script>
         function ResetForm() {
@@ -66,7 +67,7 @@
 
                 <tr>
                     <td colspan="2">
-                        <input type="submit" name="BtnSubmit" value="Save Employee" />
+                        <input type="submit" name="BtnSubmit" value="Save Employee" onclick="return IsValid();"/>
                         <input type="button" name="BtnReset" value="Reset" onclick="ResetForm();" />
                         <input type="submit" name="BtnSubmit" value="Cancel" />
                     </td>
